package Arcusical.LocalMusicStore;

message GUID
{
	required bytes rawData = 1;
}